welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: reassignment to val
	 i=m
          ^indexOfMaxValue:11: error: not found: value m
	 return m
                ^